# consilience

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
src/consilience/: __init__.py  cli.py  config.py  embed.py  engine.py  server.py  store.py  vault.py
tests/: test_engine.py  test_vault.py
