[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consilience"
version = "0.1.0"
description = "Find the links your notes are missing. Local, semantic, no cloud."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Abner Machado" }]
keywords = ["obsidian", "markdown", "zettelkasten", "mcp", "embeddings", "notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "numpy>=1.24",
    "httpx>=0.24",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
consilience = "consilience.cli:main"

[project.urls]
Homepage = "https://github.com/Abner-Machado/consilience"
Issues = "https://github.com/Abner-Machado/consilience/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/consilience"]
